# 3685-BackSquad

./: README.md
Deberes/Arboles AVL/: ArbolAVL.cpp  ArbolAVL.dev  ArbolAVL.h  ArbolAVL.layout  CMakeLists.txt  Color.h  Consola.cpp  Consola.h  Makefile.win  Menu.cpp  Menu.h  Nodo.cpp  Nodo.h  main.cpp
Deberes/Arboles AVL/TreeCalculator/: Makefile.win  Proyecto.cbp  Proyecto.layout  opstree.h  tnode.h  tree.h
Deberes/Arboles Rojo Negro/: Aplicacion.cpp  CMakeLists.txt  Menu.h  RBTree.h  main.cpp  node.h
Deberes/ArbolesBinarios/: Arbol.h  Main.cpp  Nodo.h
Deberes/newBTree02/: Aplicacion.cpp  ArbolB+.h  CMakeLists.txt  Menu.cpp  Nodo.h  main.cpp
Deberes/treeB/: Aplicacion.cpp  Aplicacion.h  ArbolesB.dev  ArbolesB.layout  Btree.h  Btree.h.gch  CMakeLists.txt  Makefile.win  Menu_option.cpp  PRUEBA DE ESCRITORIO.cpp  main.cpp  node.h
Deberes/treeB+/: ArbolesB+.dev  ArbolesB+.layout  B+Tree.cpp  CMakeLists.txt  Makefile.win  display.cpp  insertion.cpp  main.cpp  remove_.cpp  search.cpp  utilFunc.cpp
Deberes/treeB+/DBFiles/: 1.txt  3.txt  4525887.txt
Proyecto v1.0/TreeCalculator/: Aplicacion.cpp  Aplicacion.h  CMakeLists.txt  Makefile.win  Menu.cpp  Menu.h  Menu_option.cpp  Menu_option.h  Proyecto.dev  Proyecto.layout  main.cpp  node.h  opstack.h  opstr.h  opstree.h  tnode.h  tree.h
Proyecto/TreeCalculator/: Aplicacion.cpp  Aplicacion.h  CMakeLists.txt  Menu.cpp  Menu.h  Menu_option.cpp  Menu_option.h  Proyecto.dev  Proyecto.layout  main.cpp  node.h  opstack.h  opstr.h  opstree.h  stack.h  tnode.h  tree.h
Proyecto/TreeCalculator/Cdocs/: _prueba_01de_01escritorio_8cpp.html  annotated.html  class_node-members.html  class_node.html  class_stack-members.html  class_stack.html  class_t_node-members.html  class_t_node.html  class_tree-members.html  class_tree.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  main_8cpp.html  menudata.js  node_8h.html  node_8h_source.html  opstack_8h.html  opstack_8h_source.html  opstr_8h.html  opstr_8h_source.html  opstree_8h.html  opstree_8h_source.html  stack_8h.html  stack_8h_source.html  structusuario-members.html  structusuario.html  tnode_8h.html  tnode_8h_source.html  tree_8h.html  tree_8h_source.html
Proyecto/TreeCalculator/Cdocs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+19 more)
Proyecto/TreeCalculator/Ejecutable/: Antes.txt  Calculadora Polaca.lnk  Despues.txt  Licencia.txt  script_setup.iss
Proyecto/TreeCalculator/UnitTest/: UnitTest1.cpp  UnitTest2.cpp  UnitTest3.cpp  UnitTest4.cpp  pch.h
(+233 files in other folders)
